# rent_reciept_generator

./: Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml
templates/: form.html
